[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Run4.png" type="Texture" id=2]
[ext_resource path="res://Player/Run0.png" type="Texture" id=3]
[ext_resource path="res://Player/Idle0.png" type="Texture" id=4]
[ext_resource path="res://Player/Jump4.png" type="Texture" id=5]
[ext_resource path="res://Player/Jump3.png" type="Texture" id=6]
[ext_resource path="res://Player/Run3.png" type="Texture" id=7]
[ext_resource path="res://Player/Run2.png" type="Texture" id=8]
[ext_resource path="res://Player/Run7.png" type="Texture" id=9]
[ext_resource path="res://Player/Run1.png" type="Texture" id=10]
[ext_resource path="res://Player/Jump1.png" type="Texture" id=11]
[ext_resource path="res://Player/Jump0.png" type="Texture" id=12]
[ext_resource path="res://sounds/JumpJoy.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.4178
height = 33.9307

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 1.07466 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.9042
height = 32.1

[node name="Player" type="KinematicBody2D"]
position = Vector2( 542.613, 60.9487 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.14819, 2.93013 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = -145
limit_bottom = 600

[node name="pes" type="Area2D" parent="."]
position = Vector2( 0.500671, 33.4276 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pes"]
shape = SubResource( 3 )

[node name="dano" type="Area2D" parent="."]
light_mask = 4
position = Vector2( 0.500671, 33.4276 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="dano"]
light_mask = 4
position = Vector2( 0.554749, -31.6224 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="lblVidas" type="Label" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.00392157, 0, 0, 1 )
text = "Vidas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblQtdVidas" type="Label" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 10.0
margin_right = 89.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
[connection signal="body_entered" from="pes" to="." method="_on_pes_body_entered"]
[connection signal="body_entered" from="dano" to="." method="_on_dano_body_entered"]
[connection signal="body_shape_entered" from="dano" to="." method="_on_dano_body_shape_entered"]
